--- a/ReadMe
+++ b/ReadMe
@@ -19,3 +19,5 @@ Perfect for sandbox games, admin tools, and building maps!
 
 ⚠ This system is for building and testing purposes.
 Use responsibly!
+
+<i class="fi fi-ts-smile-beam"></i>
